fix white space on mobile

--- a/apps/www/src/styles/global.css
+++ b/apps/www/src/styles/global.css
@@ -36,7 +36,7 @@
 
 .bg {
     background: linear-gradient(to bottom, #00AEB9, #D2273D);
-    width: 100vw;
+    width: 100%;
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
@@ -46,4 +46,8 @@
 
 html {
 	scroll-behavior: smooth;
+}
+
+html, body {
+    overflow-x: hidden;
 }
